feat spring: jwt auth

--- a/eletron-backend/src/main/resources/application.properties
+++ b/eletron-backend/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+api.security.token.secret=acob-uaaw-mmsi
