--- a/eletron-frontend/package.json
+++ b/eletron-frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
